--- a/index.css
+++ b/index.css
@@ -1,53 +1,169 @@
-*{
-    font-family:"宋体";
+
+* {
+    font-family: "STHupo";
+    margin: 0px;/*设置四周边距都为0*/
+    box-sizing: border-box;/*宽高的设置值包括border等*/
 }
-body{
-    background-color:black;
+
+body {
+    background-color: black;
+    background: url("./re/66.jpg");/*设置背景图片*/
+    background-repeat: no-repeat;
+    background-attachment: fixed;/*设置背景图不随网页滑动而改变*/
+    background-size: cover;
 }
-h1 {
-    display: block;
-    border:2px,solid black;
-    text-align: center;
-    font-size:50px;
-    background-color:dimgray;
-    color:white;
-    border-radius: 5px;
-    width:500px;
-    margin:20px auto;
-   
-}
-#biaotou{
-    padding:1px;
-    border-radius: 5px;
-    background-color: white; 
+.content {
+    perspective: 400px;
+    width: 100%;
+    height: 620px;
     position: relative;
 }
+/* 顶部导航条 */
 #logo{
-    width:80px;
-    height: 80px;
+    padding: 5px;
+    height: 100px;
+    width: 100px;
+}
+ 
+/* 链接颜色修改 */
+
+
+/*正中间的字*/
+.avr{
     position: absolute;
-    bottom: 10px;
-    left: 5px;
-    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    top: 300px;
+    margin: auto;
+    bottom: 0;
+    color:rgba(50, 49, 50, 0.902);
+    font-size: 90px;
+    font-weight: 500;
 }
-audio{
-    display: none;
+
+audio {
+    position: fixed;
+    bottom: 50px;
+    right: 0;
 }
-#yyan{
-    width:40px;
-    height: 40px;
-    bottom: 10px;
-    right: 5px;
-    position: absolute;
+/* 创建三列 本来是想做三列的，后来没做也懒得改了 */
+/* center column */
+.leftcolumn {
+    float: left;
+    width: 10%;
 }
-a{
-    color:cadetblue;
+
+.centercolumn {
+    margin: auto;
+    width: 80%;
+    height:1000px;
+    padding: 10px;
+    
 }
-a:hover{
-    color:deeppink;
+.rightcolumn {
+    float: left;
+    width: 10%;
 }
-h2{
-    color: white;
+
+/* 文章卡片 */
+.card {
+    background-color:rgba(255, 255, 255, 0.5);
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 50px;
+    
+}
+#biaoti {
     text-align: center;
-    font-size: 30px;
+}
+#qita {
+    text-align: right;
+}
+/* 列后面清除浮动 */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+/*旋转的音符效果*/
+.music {
+    cursor: pointer;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 40px;
+    height: 40px;
+}
+img#musicico{
+	animation-name: music;
+	animation-timing-function: linear; 
+	animation-duration: 3s; 
+	animation-iteration-count: infinite; 
+}
+
+/* 实现动画的旋转 */
+@keyframes music{
+	0%{
+		transform: rotate(0deg);
+	}
+	50%{
+		transform: rotate(180deg);
+	}
+	100%{
+		transform: rotate(365deg);
+	}
+}
+
+.yinyue {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 400px;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+/* 底部 */
+.footer {
+    background-image: linear-gradient(rgba(16, 173, 225, 0.795),rgba(218, 224, 227, 0.283));
+    text-align: center;
+    margin-top: 50px;
+}
+.footer p{
+    color: rgba(255, 255, 255, 0.799);
+}
+/*中间的字效果*/
+.btn {
+    width: 18%;
+    height: 60px;
+    position: absolute;
+    top: 65%;
+    left: 41%;
+    background-image: linear-gradient(rgba(16, 173, 225, 0.795),rgba(218, 224, 227, 0.283));
+    border-radius: 40px;
+    border-color: rgb(142, 152, 162);
+}
+
+.btn p{
+        text-align: center;
+        line-height: 60px;
+        font-size: 22px;
+        color: rgba(255, 255, 255, 0.799);
+    }
+.bt {
+    border-radius: 10px;
+    cursor: pointer; /*使鼠标放上边显示手指形状*/
+    width: 25%; /*设置宽*/
+    height: 50px; /*设置高*/
+    display: block; /*行内元素设置宽高不生效，使用display:block;可以将行内元素设置为块集元素 */
+    text-align: center; /*文字在容器中横向居中*/
+    line-height: 40px; /*当数值与height一样的时候文字垂直居中*/
+    text-decoration: none; /*将文字下划线去除*/
+    background-image: linear-gradient(rgba(16, 173, 225, 0.795),rgba(218, 224, 227, 0.283)); /*设置元素背景颜色：渐变*/
+    color: rgba(0, 0, 0, 0.60); /*设置文字颜色*/
+    border: none;  /*去除边框*/
+    margin-bottom: 10px; /*下部外边框距离10像素*/
+    margin: auto;  /*使按钮居中*/
+    font-size: 20px; /*设置字体大小*/
 }
