--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ audio {
 .centercolumn {
     margin: auto;
     width: 80%;
-    height:2000px;
+    height:3000px;
     padding: 10px;
     
 }
@@ -64,7 +64,7 @@ audio {
 /* 文章卡片 */
 .card {
     position: relative;
-    max-height: 400px; /* 内容区域最大高度为200px */  
+    max-height: 300px; 
     overflow: hidden;/* 超出部分隐藏 */  
     transition: max-height 0.5s ease-in-out; 
     background-color:rgba(255, 255, 255, 0.5);
@@ -232,5 +232,12 @@ height: 30vmax;
 maodian{
     margin: 10px;
     padding: 10px;
+}
+.photo{
+    margin: 0 25%;
+  border-radius: 20px;
+  height: 500px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
